--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-live-clock": "^6.1.14",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1"
   },
